# YPmcn

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  mock-mcp.mjs  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.githooks/: pre-commit
YPmcn/: .npmignore  README.md  mcp.json  mock-mcp.mjs  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
changes/: CHG-2026-001-repository-layout-impact.md  CHG-2026-001-repository-layout.md  CHG-2026-002-repository-cleanup-impact.md  CHG-2026-002-repository-cleanup.md  CHG-2026-003-root-workspace-install-impact.md  CHG-2026-003-root-workspace-install.md  CHG-2026-004-human-documentation-impact.md  CHG-2026-004-human-documentation.md  CHG-2026-005-agent-control-plane-impact.md  CHG-2026-005-agent-control-plane.md  CHG-2026-005-automatic-human-docs-impact.md  CHG-2026-005-automatic-human-docs.md  CHG-2026-006-terra-case-correction-impact.md  CHG-2026-006-terra-case-correction.md  CHG-2026-007-contract-closure-impact.md  CHG-2026-007-contract-closure.md  CHG-2026-008-mcp-namespace-impact.md  CHG-2026-008-mcp-namespace.md  CHG-2026-009-hook-skill-authority-impact.md  CHG-2026-009-hook-skill-authority.md  CHG-2026-010-reference-mcp-runtime-impact.md  CHG-2026-010-reference-mcp-runtime.md  CHG-2026-011-hook-host-integration-impact.md  CHG-2026-011-hook-host-integration.md  CHG-2026-012-agent-flow-v22-impact.md  CHG-2026-012-agent-flow-v22.md  CHG-2026-013-vector-contract-baseline-impact.md  CHG-2026-013-vector-contract-baseline.md  CHG-2026-014-local-vector-integration-impact.md  (+26 more)
(+410 files in other folders)
