[project]
name = "mcn-agent-platform"
version = "0.1.0"
description = "MCN creator recommendation agent platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncmy>=0.2,<1",
  "greenlet>=3.1,<4",
  "mcp>=1.27,<2",
  "pydantic>=2.8,<3",
  "sqlalchemy>=2.0,<3",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = [
  ".",
  "apps/mcp-server",
  "apps/workflow-engine",
  "apps/algorithm-engine",
  "apps/wecom-integration",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
